# rubiks-cube

./: .gitignore  README.md  binary_code_generation.py  binary_representation.py  code_generation.py  cubies.py  examples_and_commands.py  glue2_to_3.py  main.py  moves.py  moves_test.py  orientation.py  requirements.txt  stickers_bitwise_ops.py  stickers_solver.py  test.py  tests.py  utils.py
code_generator/: bitwise_repr.py  common.py  numba_cuda.py
ctg/: Resnet_ctg_2cube.py  Resnet_ctg_2cube_v3.py  ctg_with_reporting.py  resnet_ctg_2cube_v3.1.py
cube2/: binary_representation.py  code_generation.py  cube.py  cubie_representation_experiment.py  generated_stickers_bitwise_ops.py  solver.py
cube3/: cube.py  generated_numba.py  generated_stickers_bitwise_ops.py  solver.py
rust-experiment/: Cargo.toml
rust-experiment/src/: cube2.rs  cube3.rs  lib.rs  main.rs  old_main.rs
xcs229ii_cube/: Resnet_ctg_2cube.py  examples_and_commands.py  glue2_to_3.py  loggers.py  main.py  orientation.py  tests.py  utils.py
xcs229ii_cube/code_generator/: bitwise_repr.py  common.py  just_list.py  numba_cuda.py
xcs229ii_cube/cube2/: cube.py  cubie_representation_experiment.py  generated_stickers_bitwise_ops.py  solver.py
xcs229ii_cube/cube3/: cube.py  fast_numba_cube_processor.py  generated_lists.py  solver.py
xcs229ii_cube/rust-experiment/: build.sh
xcs229ii_cube/rust-experiment/src/: cube2.rs  cube3.rs  solve2.rs
